<resources>
    <string name="app_name">DiamondMela</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="please_wait">Please wait..</string>
    <string name="we_just_need_your_registered_email_id_to_sent_you_password_reset_instructions">We just need your registered email ID to send you password reset instructions.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string-array name="community">
        <item>Dealer</item>
        <item>Seller</item>
    </string-array>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="state_province">State/Province</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="entity">Entity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_please_enter_email">Please enter email.</string>
    <string name="login_please_enter_password">Please enter password.</string>
    <string name="login_please_enter_valid_email">Please enter valid email.</string>
    <string name="login_please_enter_valid_mobile">Please enter 10 digit number.</string>
    <string name="login_please_enter_valid_zip">Please enter 6 digit zip.</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_country">Get Country</string>
    <string name="get_state">Get State</string>
    <string name="sign_up_please_enter_fnm">Please enter first name.</string>
    <string name="my_account">My Account</string>
    <string name="create_referral">Create Referral</string>
    <string-array name="entity_array">
        <item>Company</item>
        <item>Individual</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="terms_condition"><![CDATA[Terms & Condition ]]></string>
    <string name="login_invalid_unm_pwd">Invalid Email address or password.</string>
    <string name="dealership_guideline">Dealership Guideline</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="state">State</string>
    <string name="sign_up_please_enter_last_name">Please enter last name.</string>
    <string name="sign_up_please_enter_email">Please enter email.</string>
    <string name="sign_up_please_enter_contact_no">Please enter contact number.</string>
    <string name="sign_up_please_enter_address">Please enter address.</string>
    <string name="sign_up_please_enter_city">Please enter city.</string>
    <string name="sign_up_please_enter_zip_code">Please enter zip code.</string>
    <string name="sign_up_please_enter_password">Please enter password.</string>
    <string name="sign_up_please_enter_confirm_password">Please enter confirm password.</string>
    <string name="please_enter_pan_card_no">Please enter pan card no.</string>
    <string name="please_enter_gstin_no">Please enter GSTIN no.</string>
    <string name="account_information">ACCOUNT INFORMATION</string>
    <string name="address_book">ADDRESS BOOK</string>
    <string name="referral_code">REFERRAL CODE</string>
    <string name="bank_detail">BANK DETAIL</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="shipping_address">SHIPPING ADDRESS</string>
    <string name="change_password">Change Password</string>
    <string name="manage_address">Manage Address</string>
    <string name="add_bank_detail">Add Bank Detail</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="telephone">Telephone</string>
    <string name="street_address1">Street Address1</string>
    <string name="street_address2">Street Address2</string>
    <string name="use_as_my_default_billing_address">Use as my default billing address</string>
    <string name="use_as_my_default_shipping_address">Use as my default shipping address</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_number">Account Number</string>
    <string name="bank_account_holder_name">Account Holder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="manage_bank_detail">Manage Bank Detail</string>
    <string name="delete_msg">Are you sure you want to delete?</string>
    <string name="referral_code_colon">REFERRAL CODE :</string>
    <string name="default_billing_address">Default Billing Address</string>
    <string name="default_shipping_address">Default Shipping Address</string>
    <string name="additional_address">Additional Address</string>
    <string name="name">Name</string>
    <string name="discount">Discount (%)</string>
    <string name="action">Action</string>
    <string name="manage_referral">Manage Referral</string>
    <string name="enter_telephone">Please enter telephone number</string>
    <string name="best_category">Best Category</string>
    <string name="popular_products">Popular Products</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_capital">SIGN UP</string>
    <string name="contact_us">CONTACT US</string>
    <string name="logout">LOGOUT</string>
    <string name="home">HOME</string>
    <string name="our_collection">OUR COLLECTION</string>
    <string name="orders">ORDERS</string>
    <string name="testimonial">TESTIMONIAL</string>
    <string name="cart">CART</string>
    <string name="faq">FAQ</string>
    <string name="double_back">Please click Back again to exit.</string>
    <string name="view_all">View All</string>
    <string name="policies">POLICIES</string>
    <string name="please_logout">Are you sure you want logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="qty_26">QTY 26</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="colon">:</string>
    <string name="chat">Chat</string>
    <string name="share">Share</string>
    <string name="metal">Metal:</string>
    <string name="stone">Stone:</string>
    <string name="diamond_weight">Diamond Weight:</string>
    <string name="size">Size:</string>
    <string name="are_you_sure_you_want_log_out">Are you sure you want log out?</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="theme">Theme</string>
    <string name="customise_your_jewellery">Customise your jewellery</string>
    <string name="create_your_own_customized_jwellery">Create your own customized jwellery</string>
    <string name="ring_size">Ring Size</string>
    <string name="diamond">Diamond</string>
    <string name="carat">Carat</string>
    <string name="remove">Remove</string>
    <string name="quantity">Quantity</string>
    <string name="my_cart">My Cart</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="add_referral">Add Referral</string>
    <string name="pancard_no">PAN Card No</string>
    <string name="gstin">GSTIN</string>
    <string name="free_shpping_and_delivery">Free Shipping and Delivery</string>
    <string name="lifetime_exchange_policy">Lifetime Exchange Policy</string>
    <string name="promotional_and_gift_codes">Promotional and Gift Codes</string>
    <string name="our_most_selling">OUR MOST SELLING</string>
    <string name="we_ve_got_something_for_every_occasion">We\'ve Got Something for Every Occasion</string>
    <string name="u00a92018">©</string>
    <string name="diamond_mela_jewels_ltd">diamond mela jewels ltd.</string>
    <string name="all_right_reserved">All RIGHTS reserved.</string>
    <string name="shape">Shape</string>
    <string name="setting">Setting</string>
    <string name="quality">Quality</string>
    <string name="pieces">Pieces</string>
    <string name="total_weight">Total Weight</string>
    <string name="carat_rate">Carat Rate</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="total">Total</string>
    <string name="product_detail">PRODUCT DETAIL</string>
    <string name="sku">SKU</string>
    <string name="certificate_no">CERTIFICATE NO</string>
    <string name="diamond_detail">DIAMOND DETAIL</string>
    <string name="metal_detail">METAL DETAIL</string>
    <string name="purity">Purity</string>
    <string name="weight_approx">Weight(Approx)</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="certified_by">CERTIFIED BY</string>
    <string name="metal_without_colon">Metal</string>
    <string name="bangle_size">Bangle Size</string>
    <string name="length">Length</string>
    <string name="no_product_title">NO PRODUCT AVAILABLE, SO FAR..</string>
    <string name="no_product_title_desc"><![CDATA[There are no products matching the selection.]]></string>
    <string name="no_product_cart"><![CDATA[There are no products added in cart.]]></string>
    <string name="type">Type</string>
    <string name="without_price">Without Price</string>
    <string name="with_price">With Price</string>
    <string name="image">Image</string>
    <string name="price">PRICE</string>
    <string name="prices">Price</string>
    <string name="delete_all">Delete All</string>
    <string name="download">Download All</string>
    <string name="view_detail">View Detail</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="grand_total">Grand Total</string>
    <string name="gemstone_detail">GEMSTONE DETAIL</string>
    <string name="stock_in">Stock In</string>
    <string name="sold_out">Sold out</string>
    <string name="total_debit">Total Debit</string>
    <string name="total_deposit">Total Deposit</string>
    <string name="total_credit">Total Credit</string>
    <string name="order_id">Order Id</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="cr_dr">CR/DR</string>
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="diamondmela_is_currently_down_for_maintenance">Diamondmela is currently down for maintenance.</string>
    <string name="we_expect_to_be_back_in_a_couple_hours_thanks_for_your_patence">We expect to be back in a couple hours, Thanks for your patence.</string>
</resources>