<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/ten_size_black_round_border"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:id="@+id/linBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBankName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.dealermela.utility.DmlTextInputEditText
                android:id="@+id/edBankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_name"
                android:inputType="text"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBankAccNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ten_sp">

            <com.dealermela.utility.DmlTextInputEditText
                android:id="@+id/edBankAccNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_account_number"
                android:inputType="text"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBankAccHolderName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ten_sp">

            <com.dealermela.utility.DmlTextInputEditText
                android:id="@+id/edBankAccHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_account_holder_name"
                android:inputType="text"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilIfscCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ten_sp">

            <com.dealermela.utility.DmlTextInputEditText
                android:id="@+id/edIfscCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ifsc_code"
                android:inputType="text"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBranchName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/ten_sp">

            <com.dealermela.utility.DmlTextInputEditText
                android:id="@+id/edBranchName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/branch_name"
                android:inputType="text"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_sp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.dealermela.utility.DmlButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_five_sp"
                android:text="@string/save"
                android:background="@drawable/ten_size_black_button_round"
                android:textColor="@color/white" />

            <com.dealermela.utility.DmlButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_five_sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/ten_size_black_button_round"
                android:text="@string/cancel"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>